--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="./public/reset.css" />
     <style>
+      html,
+      body,
+      canvas {
+        margin: 0;
+        padding: 0;
+      }
+      * {
+        box-sizing: border-box;
+      }
       body {
         width: 100%;
         height: 100%;
