--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         box-sizing: border-box;
       }
       body {
+        overflow: hidden;
         width: 100%;
         height: 100%;
       }
@@ -24,10 +25,14 @@
         width: 100%;
         height: 100%;
       }
+      .hide {
+        display: none;
+      }
     </style>
   </head>
   <body>
     <canvas id="drawing-canvas"></canvas>
+    <canvas id="scratch-canvas" class="hide"></canvas>
     <script type="module" src="./build/index.js"></script>
   </body>
 </html>
