--- a/index.html
+++ b/index.html
@@ -22,15 +22,29 @@
         height: 100%;
       }
       #drawing-canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
       }
       .hide {
         display: none;
       }
+      #image-container {
+        position: absolute;
+        opacity: 0.5;
+        background-image: url("/public/ambulance.webp");
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
+    <div id="image-container"></div>
     <canvas id="drawing-canvas"></canvas>
     <canvas id="scratch-canvas" class="hide"></canvas>
     <script type="module" src="./build/index.js"></script>
