--- a/index.html
+++ b/index.html
@@ -6,45 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./public/reset.css" />
-    <style>
-      html,
-      body,
-      canvas {
-        margin: 0;
-        padding: 0;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-      }
-      #drawing-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-      }
-      .hide {
-        display: none;
-      }
-      #image-container {
-        position: absolute;
-        opacity: 0.5;
-        background-image: url("/public/ambulance.webp");
-        background-position: center;
-        background-repeat: no-repeat;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="./public/style.css" />
+    <style></style>
   </head>
   <body>
-    <div id="image-container"></div>
+    <div id="ui">
+      <button id="button1">1</button>
+      <button id="button2">2</button>
+      <button id="button3">3</button>
+      <button id="button4">4</button>
+      <button id="buttonEval">eval</button>
+      <button id="buttonSave">save</button>
+      <button id="buttonClear">clear</button>
+      <textarea id="editor"></textarea>
+    </div>
+    <!-- <div id="image-container"></div> -->
     <canvas id="drawing-canvas"></canvas>
     <canvas id="scratch-canvas" class="hide"></canvas>
     <script type="module" src="./build/index.js"></script>
