--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <style></style>
   </head>
   <body>
+    <button id="buttonHide" class="ui-button">hide</button>
+    <button id="buttonShow" class="ui-button hide">show</button>
     <div id="ui">
-      <textarea id="editor"></textarea>
+      <textarea spellcheck="false" id="editor"></textarea>
+      <div id="message">.</div>
       <button id="button1">1</button>
       <button id="button2">2</button>
       <button id="button3">3</button>
