--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <!-- <div id="image-container"></div> -->
     <canvas id="drawing-canvas"></canvas>
-    <canvas id="scratch-canvas" class="hide"></canvas>
+    <canvas id="scratch-canvas"></canvas>
     <script type="module" src="./build/index.js"></script>
   </body>
 </html>
